조회 API 배포 (#45)
* feat: 숙소 가격 통계 API URL 복수형으로 변경

* feat: 숙소제공항목 row 로 저장 및 명칭 단수로 변경

- Provides -> Provide
- AccommodationProvide 추가
- 숙소제공항목을 enum 으로 관리
- enum 을 column 으로 변환하는 ProvideElementsConverter 추가

* feat: 변경 불가능한 컬렉션 대신, 복사하여 반환하도록 변경

* style: static 변수 대문자로 변경

* style: import * 대신, 필요한 것만 import 하도록 변경

* feat: 시작 종료일자 검증로직 추가

* feat: AccommodationRepository, ReservationRepository 추가

* feat: Accommodation 생성자 추가

- @AllArgsConstructor 추가
- @Entity 를 위해 기본 생성자를 @NoArgsConstructor 로 변경

* refactor: ProvideElement -> ProvideName 으로 명칭 변경

- ProvideElement -> ProvideName
- ProvideElementConverter -> ProvideNameConverter

* feat: Schedule 에 정적 생성 메소드 추가

* feat: Reservation 에 Getter 및 AllArgsConstructor 추가

* feat: 예약 가능한 숙소 조회 쿼리 추가

* feat: 예약 일정을 저장하는 변수 타입 변경 (LocalDateTime -> LocalDate)

* feat: 예약 가능한 숙소 조회 서비스 추가

* build: MySQL Point 를 처리를 위해 hibernate-spatial 의존성 추가 및 Dialect 설정

* refactor: 전역 예외처리 로직 에러 로깅 추가

* refactor: Accommodation 의 Point 의존성 변경

* refactor: StartEndDate null 방어코드 추가

* refactor: Address toString 추가

* refactor: AccommodationService 에서 조회시 Lazy loading 되도록 수정

* style: 미사용 import 제거

* refactor: 일급컬렉션 객체 제거

* feat: 예약 가능한 숙소 조회 API 추가